<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10sp"
    android:background="@color/little_gray"
    tools:context=".PhotoGalleryPostDocument">
            <!--작업일지-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10sp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/work_name"
                    android:textColor="@color/AllScape_deep_blue"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_weight="0.2"/>
                <TextView
                    android:id="@+id/work_name"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:textColor="@color/AllScape_deep_blue"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_weight="0.8"/>
            </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10sp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/use_price"
            android:textColor="@color/AllScape_deep_blue"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_weight="0.2"/>
        <TextView
            android:id="@+id/use_price"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textColor="@color/AllScape_deep_blue"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_weight="0.8"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10sp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/content"
            android:textColor="@color/AllScape_deep_blue"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_weight="0.2"/>
        <TextView
            android:id="@+id/content"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textColor="@color/AllScape_deep_blue"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_weight="0.8"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10sp"
        android:layout_marginTop="20sp"
        android:text="@string/photo_gallery"
        android:textColor="@color/AllScape_deep_blue"
        android:textSize="16sp"
        android:textStyle="bold" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding ="10sp"
        android:background="@drawable/square_table"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:text="@string/title"
                android:gravity="start|center"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/AllScape_deep_blue"
                android:layout_weight="0.2"/>
            <EditText
                android:id="@+id/title"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:padding="8sp"
                android:layout_weight="0.8"
                android:background="@drawable/square_table"
                tools:ignore="Autofill,TextFields" />
        </LinearLayout>
        <Button
            android:id="@+id/photo_list_add_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/AllScape_deep_blue"
            android:text="@string/add"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_gravity="end"
            android:layout_marginTop="5sp"/>
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/work_detail_picture_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>