<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin ="10sp"
    android:padding="10sp"
    android:orientation="vertical"
    android:background="@drawable/square_table">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/AllScape_deep_blue"
            android:layout_weight="0.2"/>
        <TextView
            android:id="@+id/title"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/AllScape_gray"
            android:padding="8sp"
            android:layout_weight="0.8"
            tools:ignore="Autofill,TextFields" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp">
        <TextView
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:text="@string/file_name"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/AllScape_deep_blue"
            android:layout_weight="0.2"/>
        <TextView
            android:id="@+id/origin_name"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/AllScape_gray"
            android:padding="8sp"
            android:layout_weight="0.8"
            tools:ignore="Autofill,TextFields" />
    </LinearLayout>
    <Button
        android:id="@+id/delete_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/square_table"
        android:text="@string/delete"
        android:textColor="@color/AllScape_gray"
        android:textSize="16sp"
        android:layout_gravity="end"
        android:layout_marginTop="5sp"/>
</LinearLayout>