<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gonggan.source.qa.QAPost">
    <include
        android:id="@+id/include"
        layout="@layout/toolbar_original"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0sp"
        app:layout_constraintBottom_toTopOf="@+id/bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:padding="10sp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin = "10dp"
                android:paddingTop = "10sp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0sp"
                    android:layout_height="match_parent"
                    android:layout_weight = "0.2"
                    android:gravity = "start|center"
                    android:text="@string/title"
                    android:textColor="@color/AllScape_deep_blue"
                    android:textSize="18sp"
                    android:textStyle="bold" />
                <EditText
                    android:id="@+id/title_text"
                    android:layout_width="0sp"
                    android:layout_height="match_parent"
                    android:layout_weight = "0.8"
                    android:textColor="@color/AllScape_gray"
                    android:textSize="18sp"
                    android:textStyle="bold"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin = "10dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/content"
                    android:textColor="@color/AllScape_deep_blue"
                    android:textSize="18sp"
                    android:textStyle="bold" />
                <EditText
                    android:id="@+id/content_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/little_gray"
                    android:minHeight="150dp"
                    android:padding="10sp"
                    android:layout_marginTop="10sp"
                    android:textColor="@color/AllScape_gray"
                    android:textSize="16sp"
                    android:textStyle = "bold"/>
            </LinearLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/attach_file"
                    android:textColor="@color/AllScape_deep_blue"
                    android:textSize="18sp"
                    android:textStyle="bold" />
                <Button
                    android:id = "@+id/post_file_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add"
                    android:textColor="@color/AllScape_deep_blue"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:minHeight = "42dp"
                    android:background = "@drawable/deep_blue_background"
                    android:layout_gravity = "end"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id = "@+id/files_recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/little_gray"
            android:minHeight="150dp"
            android:layout_marginTop="10sp"
            android:textColor="@color/AllScape_deep_blue"
            android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id = "@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/bottom_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@drawable/bottom_modify_btn"
            android:text="@string/post"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/back_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@drawable/bottom_list_btn"
            android:text="@string/go_to_list"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>